--- a/website-root/index.html
+++ b/website-root/index.html
@@ -10,7 +10,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Content for the index page goes here -->
-    <h1>Welcome to Our German Language Learning Website</h1>
+    <h1 id="index_heading">Welcome to Our German Language Learning Website</h1>
     <p>Explore our services and resources to learn German.</p>
 
     <div id="footer-placeholder"></div>
